Bug 459861 - Compile error from missing #include lines
Summary: Compile error from missing #include lines
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Andre Heinecke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-30 13:50 UTC by Ricky Payne
Modified: 2022-09-30 15:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ricky Payne 2022-09-30 13:50:30 UTC
SUMMARY
***
Compile doesn't finish with errors. Readding some removed includes from https://invent.kde.org/pim/kleopatra/-/commit/ee130b3a32b990992650d766590094239b141bda fixes the build and all tests pass.
***


STEPS TO REPRODUCE
1. run kdesrc-build
2. 
3. 

OBSERVED RESULT

Compile errors

[ 45%] Building CXX object src/CMakeFiles/kleopatra_bin.dir/commands/setpivcardapplicationadministrationkeycommand.cpp.o
/zeta/projects/kdesrc/src/kleopatra/src/commands/revokekeycommand.cpp: In member function ‘std::unique_ptr<QGpgME::RevokeKeyJob> Kleo::RevokeKeyCommand::Private::startJob()’:
/zeta/projects/kdesrc/src/kleopatra/src/commands/revokekeycommand.cpp:186:61: error: ‘openpgp’ is not a member of ‘QGpgME’

and this one after re-adding #include <QGpgME/Protocol> to revokekeycommand.cpp from the previous #include removals commit

[ 27%] Building CXX object src/CMakeFiles/kleopatra_bin.dir/commands/signencryptfilescommand.cpp.o
/zeta/projects/kdesrc/src/kleopatra/src/commands/setprimaryuseridcommand.cpp: In member function ‘void Kleo::Commands::SetPrimaryUserIDCommand::Private::createJob()’:
/zeta/projects/kdesrc/src/kleopatra/src/commands/setprimaryuseridcommand.cpp:97:34: error: ‘openpgp’ is not a member of ‘QGpgME’
   97 |     const auto backend = QGpgME::openpgp();


EXPECTED RESULT

kleopatra to compile

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Arch Linux
(available in About System)
KDE Plasma Version: kdesrc-build git master
KDE Frameworks Version: ...
Qt Version: 5.15.6

ADDITIONAL INFORMATION

Readding the removed #include <QGpgME/Protocol>  to src/commands/revokekeycommand.cpp and src/commands/setprimaryuseridcommand.cpp allowed the compile to finish and tests to pass.
Comment 1 Laurent Montel 2022-09-30 15:01:07 UTC
Git commit a2bb1403493a8f270d44c1f32d90212d1e0560e4 by Laurent Montel.
Committed on 30/09/2022 at 15:00.
Pushed by mlaurent into branch 'master'.

Fix bug 459861: Compile error from missing #include lines

I readd it but CI is happy, local compile is fine.
Problem is in "Arch Linux"

M  +1    -0    src/commands/revokekeycommand.cpp
M  +1    -0    src/commands/setprimaryuseridcommand.cpp

https://invent.kde.org/pim/kleopatra/commit/a2bb1403493a8f270d44c1f32d90212d1e0560e4