Fix bug 459861: Compile error from missing #include lines

I readd it but CI is happy, local compile is fine.
Problem is in "Arch Linux"
BUG: 459861